syntax = "proto3";

package banking.converter;

option java_multiple_files = true;
option java_package = "org.vl4ds4m.banking.converter.grpc";
option java_outer_classname = "ConverterProto";

import "common.proto";

service Converter {
  rpc Convert (ConvertRequest) returns (ConvertResponse);
}

message ConvertRequest {
  Currency from = 1;
  Currency to = 2;
  double amount = 3;
}

message ConvertResponse {
  double amount = 2;
}
